Update change log.

--- a/src/main/resources/resources/changelog.txt
+++ b/src/main/resources/resources/changelog.txt
@@ -7,6 +7,8 @@
 * Redraw 64x64 map tiles, this also include Deep Space Anchor on all sizes.
 * Technology progress is much slower when maximum turn amount is over 400 turns.
 * Improved combat thrusters and added Combat thrusters Mk2 which generate energy.
+* Planetary exploration with fleet commander.
+* Trekker perk where commander gains more experience during planetary exploration.
 
 - Bugfixes -
 
