--- a/src/main/resources/resources/changelog.txt
+++ b/src/main/resources/resources/changelog.txt
@@ -15,6 +15,8 @@
 * Negotiator perk where ruler gains a bit of espionage after having enough diplomatic meetings.
 * Possibility to stop governor making building project selections but still gain governor bonuses.
 * Currently playing song display removed since it blocked user to click things behind it.
+* Redraw blackhole tiles.
+* Pacifist ruler cannot start war any more.
 
 - Bugfixes -
 
