--- a/src/main/resources/resources/changelog.txt
+++ b/src/main/resources/resources/changelog.txt
@@ -1,3 +1,4 @@
+
 - New features and updates -
 
 * Starmap view is drawn only for tiles which are changing. This improves performance on starmap.
@@ -27,6 +28,47 @@
 * Fix negative star years in research view. Researching always now takes at least one turn.
 * Obsoleting ship design now stops planets building that even planet view is not viewed.
 * Fix NPE from Ambient lights control.
+
+# Open Realm of Stars 0.24.0Beta
+
+- New features and updates -
+
+* Improved AI, Challenging AI selects best choice for next building project.
+* Fixed issue where AI estimated wrongly defensive pacts.
+* Hide current song when mouse cursor moves over the text.
+* Adds icons if fleet has moved, or has moves left or is routed.
+* Moving diagonally with no scanner now reveals that sector if sector is blocked.
+* Turns are now called star years.
+* Switched alternative names for Sporks and Centaurs. Centaurs are now alled Taurus. Sporks are called Sagittarian.
+* There is option to make combat faster if wanted. This will affect on animation.
+* Button for regular moves in starmap view.
+* Tab and Shift+Tab change planet/fleet in starmap view.
+* ESC key goes back from active view.
+* Diplomacy and combat start sound effects were too loud.
+* Different star types affect on what kind of radiation surround planets have.
+* UI Scheme is selectable and new grey scheme.
+* Realm background story generator and full story is shown when game ends.
+* Planet view can now show uncolonized planets. Sorting order is show best planet at top.
+* Possibility to hire leader from another realm if in trade alliance.
+* Improved leader view.
+* Two realms with same type of government get diplomacy bonus.
+* News if planets are traded or conquered by another realm.
+* Planetary events have now higher chance to happen.
+* Precious gems planetary event.
+* Added two new probe ship hulls.
+* Destroyed planet as a new space anomaly.
+
+- Bugfixes -
+
+* Fixed type casting error when voting.
+* Fixed possible race condition with SpotBugs.
+* Banned nukes were banned one star year too early.
+* Fixed issue where ship could be finished even space port was destroyed in espionage mission.
+* Fixed AI war fatigue check when making a peace offer.
+* Fixed check when war ends and checking the war fatigue.
+* Upgrade ship sound effect is not played if there is not enough credit to upgrade the ship.
+* Fixed issue where focus do not change when fleet encounters enemy fleet.
+* Fixes issue where allied privateer attacked against ally.
 
 
 # Open Realm of Stars 0.23.0Beta 
