--- a/src/main/resources/resources/changelog.txt
+++ b/src/main/resources/resources/changelog.txt
@@ -1,10 +1,16 @@
 - Bugfixes -
 
+* Fixes issue where custom constructed population build project is never finished.
+
+# Open Realm of Stars 0.28.1
+
+- Bugfixes -
+
 * Fixes weird graphical glitch on Windows when waiting for AI to take turn.
 * Fixes wrong path for custom race image when playing on Windows.
 * Fixes that custom constructed population race wasn't able to build new population.
 
-# Open Realm of Stars 0.27.0
+# Open Realm of Stars 0.28.0
 
 - New features and updates -
 
